# bacpacs-r2-multimodal-pipeline

./: .gitattributes  .gitignore  NETWORK_QUICK_START.md  bacpacs.cmd  bacpacs.ps1  launch_bacpacs_gui.cmd  mkdocs.yml  pyproject.toml  update_scistack.ps1
.github/workflows/: tests.yml
Modality_Pipelines/: CHANGELOG.md  README.md  __init__.py  cli.py  config.json
Modality_Pipelines/Cosmed_Pipeline/: cosmed_config.json  cosmed_pipeline.py  process_cosmed.py
Modality_Pipelines/Delsys_Pipeline/: README.md  delsys_config.json  delsys_filtering.py  delsys_pipeline.py  process_delsys.py
Modality_Pipelines/GAITRite_Pipeline/: gaitrite_columns.py  gaitrite_config.json  gaitrite_pipeline.py  gaitrite_scidb_scaffold.py  load_gaitrite.py
Modality_Pipelines/Xsens_Pipeline/: process_xsens.py  xsens_config.json  xsens_filtering.py  xsens_pipeline.py
Modality_Pipelines/common/: analysis_registry.json  analysis_registry.py  common_config.py  downstream_analysis.py  lightweight_registry.py  manifest.py  processing.py  r1_scidb_tables.py  r2_scidb_tables.py  scidb_tables.py  scistack_runner.py  study_config.py  table_registry.py
Modality_Pipelines/control_panel/: README.md  __init__.py  app.py  control_panel_config.json  db_service.py  pipeline_api.py
Modality_Pipelines/docs/: ANALYSIS_REGISTRY.md  MATLAB_Native_Pipeline_Migration_Plan.md
analysis_scripts/: export_downstream_db_structs_for_matlab.py  export_downstream_db_structs_to_mat.m  export_scidb_table_for_matlab.py  export_scidb_table_to_mat.m  plot_bacpacs_cycle_matched.py  plot_r1_emg_left_right_by_muscle.py  plot_r1_ham_ta_condition_by_side.py
docs/: index.md  source_of_truth.json
docs/developer-guide/: adding-analysis-methods.md  architecture.md  configuration-reference.md  documentation-freshness.md
docs/reference/: canonical-tables.md  discrepancies.md  glossary.md
docs/sop/: bacpacs-pipeline-sop.md
docs/user-guide/: cli-reference.md  downstream-analysis.md  (+3 more)
scripts/: check_docs_freshness.py  full_pipeline_smoke.py
tests/: test_analysis_registry.py  test_backend_study_namespace.py  test_cli.py  test_control_panel.py  test_delsys_processing.py  test_docs_freshness.py  test_downstream_analysis.py  test_manifest.py  test_matlab_export.py  test_scistack_runner.py  test_xsens_processing.py
