[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bacpacs-pipeline"
version = "0.1.0"
description = "BACPACS multimodal ambulation pipeline CLI and backend"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "streamlit>=1.59,<2",
]

[project.scripts]
bacpacs = "Modality_Pipelines.cli:main"

[tool.setuptools]
packages = [
    "Modality_Pipelines",
    "Modality_Pipelines.common",
    "Modality_Pipelines.control_panel",
    "Modality_Pipelines.Cosmed_Pipeline",
    "Modality_Pipelines.Delsys_Pipeline",
    "Modality_Pipelines.GAITRite_Pipeline",
    "Modality_Pipelines.Xsens_Pipeline",
]
